// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge [common] example testing should match snapshot(s) for 1.basic 1`] = `
<span
  className="lucid-Badge lucid-Badge-default lucid-Badge-filled"
  style={
    Object {
      "marginBottom": "10px",
      "marginRight": "10px",
    }
  }
>
  Badge
</span>
`;

exports[`Badge [common] example testing should match snapshot(s) for 1.basic 2`] = `
<span
  className="lucid-Badge lucid-Badge-default lucid-Badge-stroke"
  style={
    Object {
      "marginBottom": "10px",
      "marginRight": "10px",
    }
  }
>
  Badge
</span>
`;

exports[`Badge [common] example testing should match snapshot(s) for 1.basic 3`] = `
<span
  className="lucid-Badge lucid-Badge-primary lucid-Badge-filled"
  style={
    Object {
      "marginBottom": "10px",
      "marginRight": "10px",
    }
  }
>
  Badge
</span>
`;

exports[`Badge [common] example testing should match snapshot(s) for 1.basic 4`] = `
<span
  className="lucid-Badge lucid-Badge-primary lucid-Badge-stroke"
  style={
    Object {
      "marginBottom": "10px",
      "marginRight": "10px",
    }
  }
>
  Badge
</span>
`;

exports[`Badge [common] example testing should match snapshot(s) for 1.basic 5`] = `
<span
  className="lucid-Badge lucid-Badge-success lucid-Badge-filled"
  style={
    Object {
      "marginBottom": "10px",
      "marginRight": "10px",
    }
  }
>
  Badge
</span>
`;

exports[`Badge [common] example testing should match snapshot(s) for 1.basic 6`] = `
<span
  className="lucid-Badge lucid-Badge-success lucid-Badge-stroke"
  style={
    Object {
      "marginBottom": "10px",
      "marginRight": "10px",
    }
  }
>
  Badge
</span>
`;

exports[`Badge [common] example testing should match snapshot(s) for 1.basic 7`] = `
<span
  className="lucid-Badge lucid-Badge-danger lucid-Badge-filled"
  style={
    Object {
      "marginBottom": "10px",
      "marginRight": "10px",
    }
  }
>
  Badge
</span>
`;

exports[`Badge [common] example testing should match snapshot(s) for 1.basic 8`] = `
<span
  className="lucid-Badge lucid-Badge-danger lucid-Badge-stroke"
  style={
    Object {
      "marginBottom": "10px",
      "marginRight": "10px",
    }
  }
>
  Badge
</span>
`;

exports[`Badge [common] example testing should match snapshot(s) for AllTypes 1`] = `
<div>
  <div>
    <span
      class="lucid-Badge lucid-Badge-default lucid-Badge-filled"
      style="margin-bottom:10px;margin-right:10px"
    >
      Badge
    </span>
    <span
      class="lucid-Badge lucid-Badge-default lucid-Badge-stroke"
      style="margin-bottom:10px;margin-right:10px"
    >
      Badge
    </span>
  </div>
  <div>
    <span
      class="lucid-Badge lucid-Badge-primary lucid-Badge-filled"
      style="margin-bottom:10px;margin-right:10px"
    >
      Badge
    </span>
    <span
      class="lucid-Badge lucid-Badge-primary lucid-Badge-stroke"
      style="margin-bottom:10px;margin-right:10px"
    >
      Badge
    </span>
  </div>
  <div>
    <span
      class="lucid-Badge lucid-Badge-success lucid-Badge-filled"
      style="margin-bottom:10px;margin-right:10px"
    >
      Badge
    </span>
    <span
      class="lucid-Badge lucid-Badge-success lucid-Badge-stroke"
      style="margin-bottom:10px;margin-right:10px"
    >
      Badge
    </span>
  </div>
  <div>
    <span
      class="lucid-Badge lucid-Badge-danger lucid-Badge-filled"
      style="margin-bottom:10px;margin-right:10px"
    >
      Badge
    </span>
    <span
      class="lucid-Badge lucid-Badge-danger lucid-Badge-stroke"
      style="margin-bottom:10px;margin-right:10px"
    >
      Badge
    </span>
  </div>
</div>
`;

exports[`Badge [common] example testing should match snapshot(s) for Default 1`] = `
<span
  class="lucid-Badge lucid-Badge-default lucid-Badge-filled"
>
  Badge
</span>
`;
